# nl-mgo-max-vad

./: .gitignore  .npmrc.example  CONTRIBUTING.md  HOSTING_CHANGELOG.md  LICENSE.md  Makefile  README.md  app.conf.example  clients.json.example  docker-compose.testing.yml  docker-compose.yml  login_methods.json.example  max.conf.example  package-lock.json  package.json  pki_overview.json  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  vite.config.js
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  documentation-linter.yml  rdo-package-venv.yml  rdo-package.yml  validate-pr-meta.yml
app/: application.py  bindings.py  constants.py  logging.py  middlewares.py  schemas.py  utils.py
app/brp/: bindings.py  repositories.py  schemas.py  service.py
app/cbp/: __init__.py  bindings.py  factories.py  lifespan.py  models.py  repositories.py  router.py  services.py
app/config/: schemas.py  services.py
app/dependencies/: saml_dependencies.py
app/dependency_injection/: encryption_services.py  services.py  storage.py
app/docs/: __init__.py  bindings.py  router.py
app/misc/: utils.py
app/models/: acs_context.py  auth_session.py  auth_session_cookie.py  authorize_request.py
app/providers/: oidc_provider.py  saml_provider.py
app/prs/: bindings.py  repositories.py
app/pyop/: models.py
app/routers/: auth_session_router.py  docs_router.py  misc_router.py  oidc_router.py  saml_router.py
app/services/auth_session/: auth_session_cookie_builder.py  auth_session_encrypter.py  auth_session_resolver.py
app/services/cors/: services.py
app/services/encryption/: url_safe_symmetric_encryptor.py
app/services/userinfo/: cc_userinfo_service.py  cibg_userinfo_service.py  userinfo_service.py
app/storage/: auth_session_cache.py  authentication_cache.py  cache.py
app/storage/redis/: redis_cache.py
app/userinfo/: bindings.py  services.py
app/vad/: bindings.py  module.py  schemas.py  services.py
app/vad/brp/: repositories.py  service.py
app/vad/prs/: repositories.py  schemas.py
docker/: Dockerfile
docs/: max-core-local-setup.md  override-userinfoservice.md  userinfo-differences.md
docs/config/: auth_session.md
docs/features/: auth_session.md
jinja2/: digid_mock.html
scripts/: checkout-max-core.sh  setup-cache.sh  setup-config.sh  setup-local-max-core.sh  setup-saml.sh  setup-secrets.sh
tests/: app.conf.test  conftest.py  max.test.conf.docker  utils.py
tests/itests/: conftest.py
tests/itests/cbp/: test_fetch_clients.py  test_router.py
tests/itests/docs/: test_router.py
tests/itests/oidc/: test_oidc_router.py
tests/itests/routers/: test_auth_session_router.py  test_oidc_router.py  test_saml_router.py
tests/itests/vad/: test_bindings.py  test_module.py  test_services.py
tests/utests/: test_application.py  test_logging.py  test_middlewares.py
tests/utests/brp/: test_repositories.py  test_service.py
tests/utests/cbp/: fixtures.py  test_models.py  test_repositories.py  test_services.py
tests/utests/config/: test_schemas.py  test_services.py
tests/utests/dependencies/: test_saml_dependencies.py
tests/utests/providers/: test_oidc_provider.py  test_saml_provider.py
tests/utests/prs/: test_repositories.py
tests/utests/services/: test_cc_userinfo_service.py
(+13 files in other folders)
