[tool.poetry]
name = "nl-mgo-max-vad"
package-mode = false
version = "0.1.0"
description = "An extension upon the MAX-core framework adding a userinfo provider that compiles authorization context and PII to support the VAD authentication flow"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
nl-irealisatie-max-core = {git = "git@github.com:minvws/irealisatie-max-core.git", branch="main"}
python = ">=3.11,<3.12"
slowapi = ">=0.1.9,<0.2.0"
inject = ">=5.3.0,<6.0.0"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pylint = "^4.0.4"
bandit = "^1.9.3"
mypy = "^1.19.1"
autoflake = "^2.3.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
faker = "^40.1.2"
debugpy = "^1.8.19"
types-requests = "^2.32.4.20260107"
types-jwcrypto = "^1.5.0.20251102"
watchfiles = "^1.1.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = "app"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pyop.message",
    "pyop.userinfo",
    "pyop.provider",
    "jwkest.jwk",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "W0511"]

[tool.pylint.design]
max-args = 10
max-attributes = 11
max-branches = 26
max-locals = 25
max-positional-arguments = 10
max-public-methods = 25
max-returns = 11
max-statements = 100
min-public-methods = 0

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 210
max-module-lines = 300

[tool.pylint.similarities]
min-similarity-lines = 10
